new msg Model in messaging package by AI